Cabal-version: 2.2
Name:          crucible-llvm-syntax
Version:       0.1
Author:        Galois Inc.
Maintainer:    langston@galois.com
Build-type:    Simple
License:       BSD-3-Clause
License-file:  LICENSE
Category:      Language
Synopsis:      A syntax for reading and writing Crucible-LLVM control-flow graphs
-- Description:

extra-doc-files: README.md
extra-source-files:

common shared
  -- Specifying -Wall and -Werror can cause the project to fail to build on
  -- newer versions of GHC simply due to new warnings being added to -Wall. To
  -- prevent this from happening we manually list which warnings should be
  -- considered errors. We also list some warnings that are not in -Wall, though
  -- try to avoid "opinionated" warnings (though this judgement is clearly
  -- subjective).
  --
  -- Warnings are grouped by the GHC version that introduced them, and then
  -- alphabetically.
  --
  -- A list of warnings and the GHC version in which they were introduced is
  -- available here:
  -- https://ghc.gitlab.haskell.org/ghc/doc/users_guide/using-warnings.html

  -- Since GHC 8.10 or earlier:
  ghc-options:
    -Wall
    -Werror=compat-unqualified-imports
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=star-is-type
    -Werror=tabs
    -Werror=typed-holes
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unticked-promoted-constructors
    -Werror=unused-imports
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind

  if impl(ghc >= 9.2)
    ghc-options:
      -Werror=ambiguous-fields
      -Werror=operator-whitespace
      -Werror=operator-whitespace-ext-conflict
      -Werror=redundant-bang-patterns

  if impl(ghc >= 9.4)
    ghc-options:
      -Werror=forall-identifier
      -Werror=misplaced-pragmas
      -Werror=redundant-strictness-flags
      -Werror=type-equality-out-of-scope
      -Werror=type-equality-requires-operators
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010

library
  import: shared

  build-depends:
    base >= 4.16,
    crucible >= 0.1,
    crucible-llvm,
    crucible-syntax,
    mtl,
    parameterized-utils >= 0.1.7,
    text,
    what4,

  hs-source-dirs: src

  exposed-modules:
    Lang.Crucible.LLVM.Syntax

test-suite crucible-llvm-syntax-tests
  import: shared
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
    base,
    containers,
    crucible >= 0.1,
    crucible-llvm,
    crucible-llvm-syntax,
    crucible-syntax,
    filepath,
    parameterized-utils >= 0.1.7,
    tasty,
    tasty-golden,
    text,
