cabal-version:       2.2
name:                crucible-mc
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable crucible-mc
  main-is:             Main.hs
  other-modules: Print
  build-depends:
    base >= 4.11.0 && < 5.0 ,
    lens,
    parameterized-utils,
    crucible,
    llvm-pretty,
    llvm-pretty-bc-parser,
    crucible-llvm,
    crux,
    crux-llvm,
    what4,
    pretty
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options: -Wall
