cabal-version:       2.2
name:                crucible-mir
version:             0.5.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GaloisInc/crucible/blob/master/crucible-mir/README.md
license:             BSD-3-Clause
license-file:        LICENSE
author:              Joshua Gancher,
                     Rob Dockins,
                     Andrey Chudnov,
                     Stephanie Weirich,
                     Stuart Pernsteiner
maintainer:          spernsteiner@galois.com
copyright:           2017-2023 Galois, Inc.
category:            Web
build-type:          Simple
extra-doc-files:  README.md, CHANGELOG.md

common shared
  -- Specifying -Wall and -Werror can cause the project to fail to build on
  -- newer versions of GHC simply due to new warnings being added to -Wall. To
  -- prevent this from happening we manually list which warnings should be
  -- considered errors. We also list some warnings that are not in -Wall, though
  -- try to avoid "opinionated" warnings (though this judgement is clearly
  -- subjective).
  --
  -- Warnings are grouped by the GHC version that introduced them, and then
  -- alphabetically.
  --
  -- A list of warnings and the GHC version in which they were introduced is
  -- available here:
  -- https://ghc.gitlab.haskell.org/ghc/doc/users_guide/using-warnings.html

  -- Since GHC 9.6 or earlier:
  ghc-options:
    -Wall
    -Werror=ambiguous-fields
    -Werror=compat-unqualified-imports
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=deriving-typeable
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=gadt-mono-local-binds
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=misplaced-pragmas
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=missing-pattern-synonym-signatures
    -Werror=missing-signatures
    -Werror=name-shadowing
    -Werror=noncanonical-monad-instances
    -Werror=noncanonical-monoid-instances
    -Werror=operator-whitespace
    -Werror=operator-whitespace-ext-conflict
    -Werror=orphans
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=redundant-bang-patterns
    -Werror=redundant-record-wildcards
    -Werror=redundant-strictness-flags
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=star-is-type
    -Werror=tabs
    -Werror=type-defaults
    -Werror=typed-holes
    -Werror=type-equality-out-of-scope
    -Werror=type-equality-requires-operators
    -Werror=unicode-bidirectional-format-characters
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unused-do-bind
    -Werror=unused-imports
    -Werror=unused-record-wildcards
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind

  if impl(ghc < 9.8)
    ghc-options:
      -Werror=forall-identifier

  if impl(ghc >= 9.8)
    ghc-options:
      -Werror=incomplete-export-warnings
      -Werror=inconsistent-flags

  if impl(ghc >= 9.10)
    ghc-options:
      -Werror=badly-staged-types
      -Werror=data-kinds-tc
      -Werror=deprecated-type-abstractions
      -Werror=incomplete-record-selectors

  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010

library
  import: shared

  build-depends: base >= 4.11 && < 5,
                 aeson < 2.3,
                 bv-sized,
                 bytestring,
                 prettyprinter >= 1.7.0,
                 text,
                 crucible,
                 parameterized-utils >= 1.0.8,
                 containers,
                 lens,
                 vector,
                 mtl,
                 transformers,
                 what4,
                 scientific       >= 0.3,
                 template-haskell

  hs-source-dirs: src
  exposed-modules: Mir.JSON
                   Mir.Generator
                   Mir.Mir
                   Mir.GenericOps
                   Mir.ParseTranslate
                   Mir.Pass
                   Mir.Pass.AllocateEnum
                   Mir.PP
                   Mir.DefId
                   Mir.FancyMuxTree
                   Mir.Intrinsics
                   Mir.TransTy
                   Mir.Trans
                   Mir.TransCustom
