Name:          crucible-saw
Version:       0.1
Author:        Galois Inc.
Maintainer:    rdockins@galois.com
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Cabal-version: >= 1.9.2
Category:      Language
Synopsis:      Crucible bindings to SAW
Description:
  This package provides a Crucible solver backend that produces
  SAWCore terms.

library
  build-depends:
    abcBridge,
    aig,
    base >= 4.7 && < 4.11,
    containers,
    crucible >= 0.1,
    lens,
    parameterized-utils,
    saw-core >= 0.1,
    saw-core-aig

  hs-source-dirs: src

  exposed-modules:
    Lang.Crucible.Solver.SAWCoreBackend
--    Lang.Crucible.Solver.ExtractSAWCore

  ghc-options: -Wall
  ghc-prof-options: -O2 -fprof-auto-top
